--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,11 +22,11 @@ jobs:
   ci:
     uses: aladagemre/devops/.github/workflows/python-package-ci.yml@main
     with:
-      # Test across multiple Python versions (3.8-3.12)
-      python-versions: '["3.8", "3.9", "3.10", "3.11", "3.12"]'
+      # Test across multiple Python versions (3.11-3.12)
+      python-versions: '["3.11", "3.12"]'
 
-      # Test across multiple Django versions (3.2-5.0)
-      django-versions: '["3.2", "4.0", "4.1", "4.2", "5.0"]'
+      # Test across multiple Django versions (4.2 LTS, 5.2, 6.0)
+      django-versions: '["4.2", "5.2", "6.0"]'
 
       # Require 80% test coverage
       coverage-threshold: 80
